--- a/farasoftcode/README
+++ b/farasoftcode/README
@@ -7,7 +7,7 @@ CONTACT
 ~~~~~~~~~~~~~~~
 
 Author:      Linda Naughton (aka Faraday)
-Website:   http://wordsmyth.org/aresmush/
+Website:   http://www.aresmush.com
 
 Visit the website for documentation, installation instructions, bug reports, and more.
 
@@ -21,7 +21,7 @@ LICENSE FOR USING FARADAY'S MUSH SOFTCODE SYSTEM
 
 Information
 
-For more information about the system, see http://www.wordsmyth.org/aresmush
+For more information about the system, see http://www.aresmush.com
 
 Terms
 
@@ -35,7 +35,7 @@ Conditions
 
 3) You are free to utilize the program on the game, providing you display a statement of credit in your MUSH documentation (help file, news file, or website). A sample statement of credit is provided below:
 
-This game uses Faraday's MUSH Softcode System (http://www.wordsmyth.org/aresmush)
+This game uses Faraday's MUSH Softcode System (http://www.aresmush.com)
 
 4) You may not make any money off the program. This includes using it on a for-pay game.
 
