--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Faraday's Code Repository
 CONTACT
 ~~~~~~~~~~~~~~~
 
-Author:      Linda Naughton (aka Faraday)
+Author:      Faraday
 Website:   http://www.aresmush.com
 
 Visit the website for documentation, installation instructions, bug reports, and more.
