--- a/farasoftcode/README
+++ b/farasoftcode/README
@@ -6,7 +6,7 @@ This package provides a variety of softcode utilities for PennMUSH.
 CONTACT
 ~~~~~~~~~~~~~~~
 
-Author:      Linda Naughton (aka Faraday)
+Author:      Faraday
 Website:   http://www.aresmush.com
 
 Visit the website for documentation, installation instructions, bug reports, and more.
