--- a/AresMUSH/README
+++ b/AresMUSH/README
@@ -1,52 +1,5 @@
 AresMUSH
 
-AresMUSH is a new MUSH server under development.  The code here is not fit for public consumption.
+AresMUSH is a new MUSH server under development.  The code here is just a sandbox, not fit for public consumption.  But you're welcome to look around and offer suggestions.
 
-~~~~~~~~~~~~~~~
-CONTACT
-~~~~~~~~~~~~~~~
-
-Author:      Linda Naughton (aka Faraday)
-Website:   http://wordsmyth.org/aresmush/
-
-Visit the website for documentation, installation instructions, bug reports, and more.
-
-ORDER OF INSTALLATION IS IMPORTANT.  READ THE DOCUMENTATION!
-
-~~~~~~~~~~~~~~~
-DISCLAIMERS
-~~~~~~~~~~~~~~~
-
-LICENSE FOR USING FARADAY'S MUSH SOFTCODE SYSTEM
-
-Information
-
-For more information about the system, see http://www.wordsmyth.org/aresmush
-
-Terms
-
-"The program" refers to the softcode itself. "The game" refers to any MUSH, MUX, or other MU* server onto which the program is installed.
-
-Conditions
-
-1) The program and all documentation are copyright 2010 by Linda Naughton, with the exception of the external systems Myrddin's BBS/Cron, Max's Table Code Parent, Shofari's Idle Purger and the FUDGE RPG rules. These systems are copyright by their respective owners.
-
-2) There is NO WARRANTY for this program, express or implied. You accept it as-is, and agree that the author is not responsible for any defects in operation or harm to the game.
-
-3) You are free to utilize the program on the game, providing you display a statement of credit in your MUSH documentation (help file, news file, or website). A sample statement of credit is provided below:
-
-This game uses Faraday's MUSH Softcode System (http://www.wordsmyth.org/aresmush)
-
-4) You may not make any money off the program. This includes using it on a for-pay game.
-
-5) You are free to distribute the program to others, providing a copy of this license is included.
-
-6) You are free to modify the program at will to create derivative works, but the derivative work is subject to the original license agreement. In other words, you cannot take the code, modify it, and then sell it or pretend it is your own. 
-
-I will support the code as far as I can, but I make no guarantees that I will have time to do everything. RL comes first.   Submit bugs and feature requests via the webpage above.
-
-~~~~~~~~~~~~~~~~
-CHANGES
-~~~~~~~~~~~~~~~
-
-See the CHANGELOG file for a description of changes since the last release.
+For more information about the system, see http://www.aresmush.com.
