--- a/FaraLogCleaner/README.rdoc
+++ b/FaraLogCleaner/README.rdoc
@@ -1,28 +1,3 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Faraday's log cleaner takes raw log files (presumably captured by your favorite MU* client) and strips out junk such as pages, channels, OOC chatter, coming/going messages, and various other soft- and hard-coded command spam. It also adds blank lines as necessary so everything is spaced out nicely.
