--- a/releases/5.0.1.md
+++ b/releases/5.0.1.md
@@ -7,9 +7,7 @@ categories: [ release ]
 
 This is a patch release for 5.0 that only affects a few systems.
 
-[Download 5.0.1 Patch](https://github.com/downloads/lynnfaraday/MUSH/FaraMUSHCode%20Patch%20v5.0.1.zip)
-
-This is just a small patch for the player setup system so it initializes FaraMail properly on new players.  The [Version 5.0 Release Package](http://github.com/downloads/lynnfaraday/MUSH/FaraMUSHCode-V5.0.zip) now has this patch bulit in, but if you already installed 5.0 you might need it.  
+This is just a small patch for the player setup system so it initializes FaraMail properly on new players.  The Version 5.0 Release Package now has this patch bulit in, but if you already installed 5.0 you might need it.  
 
 To see whether you need the patch, just type *+install/dir setup*.  If your setup objects are at 5.0 then you need the patch.  If they are at 5.0.1 you have the patch already.
 
