--- a/releases/5.0.2.md
+++ b/releases/5.0.2.md
@@ -7,9 +7,7 @@ categories: [ release ]
 
 This is a patch for 5.0 that only affects a few systems.
 
-[Download 5.0.2 Patch](https://github.com/downloads/lynnfaraday/MUSH/FaraMUSHCode%20Patch%20v5.0.2.zip)
-
-This is a small patch for the TP Room parent object, which wasn't setting up its DB#'s properly.  The [Version 5.0 Release Package](http://github.com/downloads/lynnfaraday/MUSH/FaraMUSHCode-V5.0.zip) now has this patch bulit in, but if you already installed 5.0 you might need it.  
+This is a small patch for the TP Room parent object, which wasn't setting up its DB#'s properly.  The Version 5.0 Release Package now has this patch bulit in, but if you already installed 5.0 you might need it.  
 
 To see whether you need the patch, just type *+install/dir room*.  If your TP Room object is at 5.0 then you need the patch.  If it is at 5.0.2 you have the patch already.
 
